SDK_old/SampleCG 1.2.0.0/inc/ThermalCamSDK.h

#define THERMALSDK_API __declspec(dllexport)
#define THERMALSDK_API __declspec(dllimport)
/* Enumeration of Message Type */
typedef enum
{
	_IRF_NONE				= -1,			//	No Received Packet
	_IRF_ACK				= 0,			//	Receive Acknowledgement as a result of request
	_IRF_NAK				= 1,			//	Receive Negative Acknowledgement as a result of request
	_IRF_ALIVE				= 2,			//	Send Alive Message
	_IRF_STREAM_ON			= 3,			//	Request to start raw data transfer.
	_IRF_STREAM_OFF			= 4,			//	Request to stop raw data transfer.
	_IRF_STREAM_DATA		= 5,			//	Receive raw data
	_IRF_REQ_CAM_DATA		= 7,			//	Request a camera configuration data.
	_IRF_CAM_DATA			= 8,			//	Receive a camera configuration data as a result of request.
	_IRF_SET_CAM_DATA		= 10,			//	Request camera to save one of various setting CMD_xxxx.
	_IRF_SET_USER_PALETTE	= 11,			//	User color palette update. (pc --> cam)
	_IRF_REQ_SYS_INFO		= 12,			//	Request System Information. (pc --> cam)
	_IRF_SYS_INFO			= 13,			//	Receive System Information as a result of request.	(cam --> pc)
	_IRF_SPOT_STREAM_ON		= 14,			//	Request to start spot streaming transfer.
	_IRF_SPOT_STREAM_OFF	= 15,			//	Request to stop spot streaming transfer.
	_IRF_SPOT_STREAM_DATA	= 16,			//	Receive spot streaming data.
	_IRF_REQ_TEMP_TABLE		= 19,			//	Request temperature and offset table. (pc --> cam)
}	IRF_MESSAGE_TYPE_T;
/* Enumeration of Color Palette Type */
typedef enum
{
	YELLOW_COLOR_MAP		= 0,
	RAINBOW_COLOR_MAP,
	RAIN900_COLOR_MAP,
	RAIN10_COLOR_MAP,	
	MIDGREY_COLOR_MAP,
	MIDGREEN_COLOR_MAP,
	MEDICAL_COLOR_MAP,
	IRON10_COLOR_MAP,
	IRON_COLOR_MAP,
	GREYRED_COLOR_MAP,
	GREY10_COLOR_MAP,
	GREY_COLOR_MAP,
	GLOWBOW_COLOR_MAP
}	IRF_PALETTE_TYPE_T;
/* Enumeration of Thermal Camera Model Type */
typedef enum
{
	CX320	= 0,
	CX640,
	CG320,
	CG640
}	IRF_CAM_MODEL_TYPE_T;
/* Structure of image data size */
typedef struct
{	
	unsigned short			xSize;					//	horizontal size of raw data
	unsigned short			ySize;					//	vertical size of raw data
}	IRF_IMAGE_INFO_T;
/* Structure of temperature correction parameters */
typedef struct
{
	float					emissivity;				//	0.01 - 1.00
	float					atmTemp;				//	Atmospheric Temperature in Celsius
	float					atmTrans;				//	Atmospheric Transmission in Celsius

	int						zero_offset;			//	Offset for Temperature
}	IRF_TEMP_CORRECTION_PAR_T;
/**
 @struct	__alarm_config__
 @brief		Alarm Config ( CG MODEL )
*/
typedef struct  __alarm_config__
{  
	uint8_t					f_enable;				/**< Alarm Enable */
    uint8_t					output_mask;			/**< Alarm Output Mask */
    uint8_t					cond;					/**< Alarm Condition */
    uint8_t					reserved;				/**< Reserved */
    int16_t					temp;					/**< Alarm Temperature */
    uint16_t				delay;					/**< Alarm Delay */
}   ALRMCFG, * ALRMCFG_PTR;
/* Camera information structure (CX, CG MODEL) */
typedef struct strSAVEDATA
{
	union {
		struct
		{
			unsigned int		crc;				//	CRC Data
			unsigned char		ver;				//	Setup Data Version	( CG Model : 0x20 )
			unsigned char		sensor;				//	Sensor Type ( 0x00 : CX320, 0x01 : CX640, 0x20 : CG QVGA, 0x21 : CG VGA )
			unsigned char		tv;					//	Video Output Format ( 0 : NTSC, 1 : PAL )
			unsigned char		temp_mode;			//	Temperature Measurement Mode ( 0 : Normal, 1 : High, 2 : Medical )

			unsigned char		id;					//	RS485 ID
			unsigned char		baudrate;			//	RS485 Baudrates
			short				level;				//	CX Model Only
			unsigned short		span;				//	CX Model Only
			unsigned char		agc;				//	AGC MODE ( 1 : AUTO, 0 : MANUAL )
			unsigned char		invert;				//	Video Color Invert ( 0 : OFF, 1 : LUMA, 2 : CHROMA, 3 : L + C )
			unsigned char		mirror;				//	Video Mirror ( 0 : OFF, 1 : ON )
			unsigned char		flip;				//	Video Flip ( 0 : OFF, 1 : ON )
			unsigned char		colorbar;			//	Color-Bar ( 0 : OFF, 1 : ON )
			unsigned char		showinfo;			//	Show Temperature Information ( 0 : OFF, 1 : ON )
			unsigned char		indicator;			//	High/Low Indicator ( 0 : OFF, 1 : ON )
			unsigned char		unit;				//	Temperature Unit ( 0 : Celcius, 1 : Fahrenheit )
			unsigned char		dhcp;				//	DHCP Enable ( 0 : OFF, 1 : ON )
			unsigned char		color;				//	Color Pallete ( reference IRF_CAM_PALETTE_TYPE_T )
													//	( 0 : GREY, 1 : RAINBOW, 2 : IRON, 3 : GREYRED, 4 : GLOWBOW, 5 : YELLOW, 6 : MIDGREY, 7 : MIDGREEN )
			unsigned char		alpha;				//	Alpha Blending ( 0 ; OFF, 1 : 20%, 2 : 40%, 3 : 60%, 4 : 80% )
			unsigned char		zoom;				//	Video Zoom ( 0 : OFF, 1 : x2, 2 : x4 )
			unsigned char		sharp;				//	CX Model Only
			unsigned char		noise;				//	Noise Filter ( 0 : OFF, 1 : NR1, 2 : NR2, 3 : NR1 + NR2 )
			unsigned short		nuc;				//	CX Model Only
			unsigned char		econt;				//	CX Model Only
			unsigned int		ipaddr;				//	IP Address ( ex : 192.168.0.100 => 0xC0A80064 )
			unsigned int		netmask;			//	Subnet Mask ( ex : 255.255.255.0 => 0xFFFFFF00 )
			unsigned int		gateway;			//	Gateway ( ex : 192.168.0.1 => 0xC0A80001 )
			unsigned int		dns;				//	Not Used

			unsigned char		alarm1_func;		//	CX Model Only
			unsigned char 		alarm1_cond;		//	CX Model Only
			short				alarm1_value;		//	CX Model Only
			unsigned char		alarm2_func;		//	CX Model Only
			unsigned char		alarm2_cond;		//	CX Model Only
			short				alarm2_value;		//	CX Model Only
			unsigned char		down_filter;		//	CX Model Only
			unsigned char		show_center;		//	Show Center Cross ( 0 : OFF, 1 : ON )
			unsigned char		show_spot;			//	Show Spot For CX Model ( 0 : OFF, 1 : ON ) 
													//	Show ROI For CG Model ( 0 : OFF, 1 : ON ) 
			unsigned char		show_correction;	//	Show Correction Parameters ( 0 : OFF, 1 : ON ) 
			unsigned char		show_isotherm;		//	CX Model Only
			unsigned char		alarm1_duration;	//	CX Model Only
			unsigned char		alarm2_duration;	//	CX Model Only

			struct {
				unsigned char flag;					//	ROI Function Mask ( 0x01 : Enable, 0x02 : Exclude )
				unsigned short x1;					//	Position (x2)
				unsigned short y1;					//	Position (x2)
				unsigned short x2;					//	Position (x2)
				unsigned short y2;					//	Position (x2)
			}	roi[2];								//	CX Model Only

			//-------------------------------------------------------------------------------------
			//	parameters below this line is for CG Model
			uint8_t     f_disp_icon;				//	Show Display Icon Flag ( 0 : OFF, 1 : ON )
            
            uint8_t     brightness;					//	Video Brightness Value ( -40 ~ 40 )
            uint8_t     contrast;					//	Video Contrast Value ( -10 ~ 10 )
            
            uint8_t     f_edge_enhance;				//	Video Edge Enhancement Flag ( 0 : OFF, 1 : ON )
            
            uint8_t     nuc_mode;					//	Core NUC Mode Value ( 0 : OFF, 1 : TIME, 2 : AUTO, 3 : TIME + AUTO )
            uint8_t     nuc_time;					//	Core NUC Time Value ( 0 : 1 MIN, 1 : 5 MIN, 2 : 10 MIN, 3 : 30 MIN, 4 : 60 MIN )
            uint16_t    nuc_thres;					//	Core NUC Auto Threshold Value ( 0 : lowest, 1 : low, 2 : middle, 3 : high, 4 : highest )
            
            uint16_t    agc_man_max;				//	Core AGC Manual Maximum Value ( 0 ~ 16383 )
            uint16_t    agc_man_min;				//	Core AGC Manual Minimum Value ( 0 ~ 16383 )
            
            uint8_t     srl_protocol;				//	Serial Protocol Value ( 0 : Pelco-D, 1 : COX )
            
            uint16_t    scn0_l_margin;				//  Video left margin ( 0 ~ 70 )
            uint16_t    scn0_r_margin;				//  Video right margin ( 0 ~ 70 )
            uint16_t    scn0_t_margin;				//  Video top margin ( 0 ~ 70 )
            uint16_t    scn0_b_margin;				//  Video bottom margin ( 0 ~ 70 )
            
            uint16_t    scn1_l_margin;				//	HDMI left margin ( 0 ~ 150 )
            uint16_t    scn1_r_margin;				//  HDMI right margin ( 0 ~ 150 )
            uint16_t    scn1_t_margin;				//  HDMI top margin ( 0 ~ 150 )
            uint16_t    scn1_b_margin;				//  HDMI bottom margin ( 0 ~ 150 )
            
            uint8_t     hdmi_mode;					//  HDMI Mode ( 2 : 480P, 3 : 576P, 4 : 720P 50, 5 : 720P 60, 6 : 1080I 50, 7 : 1080I 60, 9 : 1080P 50, 10 : 1080P 60 )
            
            uint8_t     alarm1_type;				//  Alarm1 type ( 0 : NO, 1 : NC )
            uint8_t     alarm1_mode;				//  Alarm1 operation mode ( 0 : OFF, 1 : STABILIZE, 2 : ALIVE PWM, 3 : TEMPERATURE, 4 : TEST ALARM ON, 5 : TEST ALARM OFF )
            uint8_t     alarm1_dura;				//  Alarm1 duration ( 0 ~ 99 )
			uint8_t     alarm1_remote_ctrl;			//  Alarm1 remote control ( 0 : OFF, 1 : ON ) 
            
            uint8_t     alarm2_type;				//  Alarm2 type ( 0 : NO, 1 : NC )
            uint8_t     alarm2_mode;				//  Alarm2 operation mode ( 0 : OFF, 1 : STABILIZE, 2 : ALIVE PWM, 3 : TEMPERATURE, 4 : TEST ALARM ON, 5 : TEST ALARM OFF )
            uint8_t     alarm2_dura;				//  Alarm2 duration ( 0 ~ 99 )
			uint8_t     alarm2_remote_ctrl;			//  Alarm2 remote control ( 0 : OFF, 1 : ON ) 

			int16_t		zero_offset;				//	Temperature Zero Offset
			uint16_t	measure_distance;			//	Measure Distamce

			uint8_t		nr1_strength;				//	Noise Reduction 1 Strength
			uint8_t		nr2_strength;				//	Noise Reduction 2 Strength
			uint8_t		ee_strength;				//	Edge Enhancement Strength
			//-------------------------------------------------------------------------------------
		};

		unsigned char		reserved1[128];
	};
	
	union {
		struct
		{
			unsigned char		limit9;				//	9Hz Mode
			unsigned char		enable_high;		//	CX Model Only
			unsigned char		correction;			//	Correction Parameters ( 0 : Not Used, 1 : Used )
			unsigned char		emissivity;			//	Emissivity ( 1 ~ 100 )
			unsigned char		transmission;		//	Transmission ( 1 ~ 100 )
			short				atmosphere;			//	Atmosphere (-500 ~ 1000 )
		
			union {
				struct {
					unsigned char		enable;
					unsigned short		x;
					unsigned short		y;
					unsigned char		local;
					unsigned char		em;
					unsigned char		tr;
					short	at;
					unsigned char		reserved[6];
				} spot[10];							//	CX Model Only

				struct  {
					uint8_t		mode;				//	ROI Mode
					uint8_t     temp_type;			//	Temperature Type ( Select MAX, MIN, AVG )
					uint16_t	x;					//	x position
					uint16_t	y;					//	y position
					uint16_t	w;					//	ROI Width
					uint16_t	h;					//	ROI Height
					uint8_t		f_corr;				//	Enable Correction
					uint8_t		em;					//	Emissivity
					uint8_t		tr;					//	Transmission
					int16_t		at;					//	Atmosphere					
					uint8_t     reserved;
				}   cg_roi[10];						//	CG Model Only
			};

			union {
				struct {
					unsigned char		enable;
					unsigned int		seed_color;
					short				top;
					short				bottom;
					unsigned char		reserved[3];
				} iso[3];							//	CX Model Only

				struct {
                    uint8_t		mode_mask;			//	ISO Mode Mask
                    uint8_t		tran_mask;			//	ISO Transparent Mask
                    
                    int16_t     max_temp;			//	Max Temperature
                    int16_t     min_temp;			//	Min Temperature
                    
                    uint32_t	above_color;		//	Above Seed Color
                    uint32_t	below_color;		//	Below Seed Color
                    uint32_t	between_color;		//	Between Seed Color
                } cg_iso[2];						//	CG Model Only
			};

													//	Start CG Model Only

			uint8_t         hdmi_list[8];			//	Supported HDMI Output Resolution List
			uint16_t		support_temp_mode;		//	Supported Temperature Mode

			uint8_t			f_support_motor_focus;	//	Support Motorized Focus
			uint8_t			f_support_motor_zoom;	//	Support Motorized Zoom

			uint16_t		meas_dist_min;			//	Supported Measurment Distance Minimum
			uint16_t		meas_dist_max;			//	Supported Measurment Distance Maximum

													//	End CG Model Only
		};

		unsigned char		reserved2[256];	
	};
		
	union {	// 3rd section (128) = 512
        struct  {
            ALRMCFG         max_temp;				//	MAX Temperature 
            ALRMCFG         min_temp;				//	MIN Temperature 
            ALRMCFG         avg_temp;				//	AVG Temperature 
            ALRMCFG         ctr_temp;				//	CTR Temperature 
            ALRMCFG         roi_temp[10];			//	ROI Temperature 
        }   temp_alarm;								//	CG Model Only
        
		uint8_t     reserved3[128];
	};	// 3rd section (128) = 512
}	IRF_SAVEDATA_T;
/* Structure of CRD data header */
typedef struct
{
	BYTE					dhSeparator[2];			// Start string of DATA_HEADER 
	BYTE					dhSize;					// Size of DATA_HEADER 
	BYTE					dhType;					// Type of Data ( 0x00 : Image, 0x01 : Unkown ) 
	unsigned int			curFrame;				// Current frame 
	__int64					savedTime;				// Saved time 
	unsigned int			dataSize;				// Data size 

	BYTE					reserved[240];			// Reserved for later use 	
}	IRF_CRD_DATA_HEADER_T;
/* Structure of received data processing from TCP/IP */
typedef struct 
{
	unsigned short*			ir_image;				//	16bits raw image data * 10
	DWORD					image_buffer_size;		//	Raw image size.
	LPBYTE					lpNextData;				//	This variable is remainder data after make a raw image from communication buffer, it used for make next raw image.
	DWORD					dwSize;					//	This variable is size of remainder data.
	DWORD					dwPosition;				//	This variable is current position in the remainder data.

	IRF_MESSAGE_TYPE_T		msg_type;
	IRF_SAVEDATA_T			save_data;				//	cam data in CAM_DATA

	unsigned int			fw_ver;					//	Firmware version in SYS_INFO

	//++ csi 20170728 add core info
	unsigned int			core_type;				//	core type ( 0 : QVGA, 1 : VGA )
	unsigned short			h_res;					//	horizontal resolution
	unsigned short			v_res;					//	vertical resolution
	//++

	unsigned short			PMSGTYPE;				//	Primary Message Type Code
	unsigned short			RCODE;					//	Response Code

	DWORD					reserved[10];			//	Reserved ( Write may cause problem )
}	IRF_IR_CAM_DATA_T;
/* Structure of system info */
typedef struct {
	BYTE					MAC[6];					// MAC address
	unsigned int			fw_ver;					// Firmware version (Package)
	unsigned int			cpu_ver;				// Firmware version (CPU)
	unsigned int			fpga_ver;				// Firmware version (FPGA)
	unsigned int			engine_ver;				// Firmware version (Engine)

	BYTE					reserved[42];			// Reserved
}	IRF_SYS_INFO_T;
/* Structure of system information of camera */
typedef struct {
	IRF_SYS_INFO_T					sys_info;		// System info
	IRF_MESSAGE_TYPE_T				msg_type;

	unsigned short			PMSGTYPE;				// Primary Message Type Code
	unsigned short			RCODE;					// Response Code
}	IRF_RECEIVED_CAM_SYS_T;
/* Structure of temperature table for temperature correction */
typedef struct {
	short					normal_min;				// Minimum temperature in the normal temperature table
	short					normal_max;				// Maximum temperature in the normal temperature table
	short					high_min;				// Minimum temperature in the high temperature table
	short					high_max;				// Maximum temperature in the high temperature table

	unsigned int			normal_table[256];		// Normal temperature table ( normal_max - normal_min + 1 ) * 4bytes(level)
	unsigned int			high_table[256];		// High temperature table ( ( high_max - high_min ) / 5 + 1 ) * 4bytes(level)
}	IRF_TEMP_TABLE_T;
/* Structure of temperature offset table for temperature correction */
typedef struct {
	short					normal_min;				// Minimum temperature in the normal temperature table
	short					normal_max;				// Maximum temperature in the normal temperature table
	short					high_min;				// Minimum temperature in the high temperature table
	short					high_max;				// Maximum temperature in the high temperature table

	int						normal_table[256];		// Normal temperature table ( normal_max - normal_min + 1 ) * 4bytes( temperature * 10 )
	int						high_table[256];		// High temperature table ( ( high_max - high_min ) / 5 + 1 ) * 4bytes( temperature * 10 )
}	IRF_TEMP_OFFSET_TABLE_T;
/* Structure of temperature table and temperature offset table */
typedef struct {
	IRF_TEMP_TABLE_T				temp_table;				// Temperature table structure
	IRF_TEMP_OFFSET_TABLE_T			temp_offset_table;		// Temperature offset table structure
}	IRF_MIX_TEMP_TABLE_T;
/* Structure of receive temperature and offset table from a camera */
typedef struct {	
	IRF_MESSAGE_TYPE_T				msg_type;		// Message type
	IRF_MIX_TEMP_TABLE_T			sTemp_table;	// Temperature table structure	

	unsigned short			PMSGTYPE;				// Primary Message Type Code
	unsigned short			RCODE;					// Response Code
}	IRF_RECEIVED_TEMP_TABLE_T;
//	Common Interface
THERMALSDK_API short PASCAL OpenConnect(HANDLE *pHandle, UINT *pTimerID, LPCSTR strDestination, LPCSTR strServiceName, int nProtocol, int nType);
THERMALSDK_API short PASCAL CloseConnect(HANDLE *handle, UINT timerID);
THERMALSDK_API short PASCAL SendMessageToCamera(HANDLE handle, UINT *pTimerID, IRF_MESSAGE_TYPE_T type, unsigned short PMSGTYPE, unsigned short RCODE, DWORD RCODE2, DWORD RCODE3, DWORD RCODE4);
THERMALSDK_API short PASCAL GetIRImages(HANDLE handle, UINT *pTimerID, IRF_IR_CAM_DATA_T* cam_data);
THERMALSDK_API short PASCAL GetImageLUT(unsigned char *palette, IRF_PALETTE_TYPE_T paletteType, bool bInvert);
THERMALSDK_API short PASCAL GetGrayToPaletteImage(unsigned char *from_image, void* to_image, unsigned short width, unsigned short height, unsigned char *palette, int BitsPixel, BOOL bMirror, BOOL bFlip);
THERMALSDK_API float PASCAL GetPointTemp(HANDLE ir_image, IRF_IMAGE_INFO_T image_info, float *tempLUT, IRF_TEMP_CORRECTION_PAR_T corrPara, POINT pt);
THERMALSDK_API float PASCAL GetPointTempCG( HANDLE ir_image, IRF_IMAGE_INFO_T image_info, IRF_TEMP_CORRECTION_PAR_T corrPara, POINT pt );
//	Temperature Converter
THERMALSDK_API float PASCAL ConvertFahToCels(float temp);