SDK/SDK/thermal_cam_sdk_ctypes.py


# IRF_CRD_DATA_HEADER_T
class IRF_CRD_DATA_HEADER_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("dhSeparator", BYTE * 2),
        ("dhSize", BYTE),
        ("dhType", BYTE),
        ("curFrame", UINT), # uint32_t
        ("savedTime", ctypes.c_longlong), # __int64
        ("dataSize", UINT), # uint32_t
        ("reserved", BYTE * 240),
    ]

# IRF_IR_CAM_DATA_T
class IRF_IR_CAM_DATA_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("ir_image", ctypes.POINTER(WORD)), # uint16_t*
        ("image_buffer_size", DWORD),
        ("lpNextData", LPBYTE),
        ("dwSize", DWORD),
        ("dwPosition", DWORD),
        ("msg_type", IRF_MESSAGE_TYPE_T),
        ("save_data", IRF_SAVEDATA_T),
        ("fw_ver", UINT), # uint32_t
        ("core_type", UINT), # uint32_t
        ("h_res", WORD), # uint16_t
        ("v_res", WORD), # uint16_t
        ("PMSGTYPE", WORD), # uint16_t
        ("RCODE", WORD), # uint16_t
        ("reserved", DWORD * 10),
    ]

# IRF_SYS_INFO_T
class IRF_SYS_INFO_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("MAC", BYTE * 6),
        ("fw_ver", UINT),
        ("cpu_ver", UINT),
        ("fpga_ver", UINT),
        ("engine_ver", UINT),
        ("reserved", BYTE * 42),
    ]

# IRF_RECEIVED_CAM_SYS_T
class IRF_RECEIVED_CAM_SYS_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("sys_info", IRF_SYS_INFO_T),
        ("msg_type", IRF_MESSAGE_TYPE_T),
        ("PMSGTYPE", WORD),
        ("RCODE", WORD),
    ]

# IRF_TEMP_TABLE_T
class IRF_TEMP_TABLE_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("normal_min", ctypes.c_short),
        ("normal_max", ctypes.c_short),
        ("high_min", ctypes.c_short),
        ("high_max", ctypes.c_short),
        ("normal_table", UINT * 256),
        ("high_table", UINT * 256),
    ]

# IRF_TEMP_OFFSET_TABLE_T
class IRF_TEMP_OFFSET_TABLE_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("normal_min", ctypes.c_short),
        ("normal_max", ctypes.c_short),
        ("high_min", ctypes.c_short),
        ("high_max", ctypes.c_short),
        ("normal_table", ctypes.c_int * 256),
        ("high_table", ctypes.c_int * 256),
    ]

# IRF_MIX_TEMP_TABLE_T
class IRF_MIX_TEMP_TABLE_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("temp_table", IRF_TEMP_TABLE_T),
        ("temp_offset_table", IRF_TEMP_OFFSET_TABLE_T),
    ]

# IRF_RECEIVED_TEMP_TABLE_T
class IRF_RECEIVED_TEMP_TABLE_T(ctypes.Structure):
    _pack_ = 1
    _fields_ = [
        ("msg_type", IRF_MESSAGE_TYPE_T),
        ("sTemp_table", IRF_MIX_TEMP_TABLE_T),
        ("PMSGTYPE", WORD),
        ("RCODE", WORD),
    ]

# --- 5. Function Definition 매핑 ---

# Common Interface
# THERMALSDK_API int16_t PASCAL OpenConnect(HANDLE *pHandle, HANDLE *pTimerID, LPCSTR strDestination, LPCSTR strServiceName, int nProtocol, int nType);
thermal_sdk.OpenConnect.argtypes = [
    ctypes.POINTER(HANDLE),
    ctypes.POINTER(HANDLE),
    LPCSTR,
    LPCSTR,
    ctypes.c_int,
    ctypes.c_int,
]
thermal_sdk.OpenConnect.restype = ctypes.c_short # int16_t

# THERMALSDK_API int16_t PASCAL CloseConnect(HANDLE *handle, HANDLE timerID);
thermal_sdk.CloseConnect.argtypes = [
    ctypes.POINTER(HANDLE),
    HANDLE,
]
thermal_sdk.CloseConnect.restype = ctypes.c_short # int16_t

# THERMALSDK_API int16_t PASCAL GetIRImages(HANDLE handle, HANDLE *pTimerID, IRF_IR_CAM_DATA_T* cam_data);
thermal_sdk.GetIRImages.argtypes = [
    HANDLE,
    ctypes.POINTER(HANDLE),
    ctypes.POINTER(IRF_IR_CAM_DATA_T),
]
thermal_sdk.GetIRImages.restype = ctypes.c_short # int16_t

# THERMALSDK_API int16_t PASCAL SendMessageToCamera(HANDLE handle, HANDLE *pTimerID, IRF_MESSAGE_TYPE_T type, uint16_t PMSGTYPE, uint16_t RCODE, DWORD RCODE2, DWORD RCODE3, DWORD RCODE4);
thermal_sdk.SendMessageToCamera.argtypes = [
    HANDLE,
    ctypes.POINTER(HANDLE),
    IRF_MESSAGE_TYPE_T,
    WORD, # uint16_t
    WORD, # uint16_t
    DWORD,
    DWORD,
    DWORD,
]
thermal_sdk.SendMessageToCamera.restype = ctypes.c_short # int16_t

# THERMALSDK_API int16_t PASCAL GetImageLUT(uint8_t *palette, IRF_PALETTE_TYPE_T paletteType, bool bInvert);
thermal_sdk.GetImageLUT.argtypes = [
    LPBYTE, # uint8_t*
    IRF_PALETTE_TYPE_T,
    BOOL, # bool
]
thermal_sdk.GetImageLUT.restype = ctypes.c_short # int16_t

# THERMALSDK_API int16_t PASCAL GetGrayToPaletteImage(uint8_t *from_image, void* to_image, uint16_t width, uint16_t height, uint8_t *palette, int BitsPixel, BOOL bMirror, BOOL bFlip);
thermal_sdk.GetGrayToPaletteImage.argtypes = [
    LPBYTE, # uint8_t*
    ctypes.c_void_p, # void*
    WORD, # uint16_t
    WORD, # uint16_t
    LPBYTE, # uint8_t*
    ctypes.c_int,
    BOOL, # BOOL
    BOOL, # BOOL
]
thermal_sdk.GetGrayToPaletteImage.restype = ctypes.c_short # int16_t

# CX320, CX640 Only Interface (예시)
# THERMALSDK_API float PASCAL GetPointTemp(HANDLE ir_image, IRF_IMAGE_INFO_T image_info, float *tempLUT, IRF_TEMP_CORRECTION_PAR_T corrPara, POINT pt);
thermal_sdk.GetPointTemp.argtypes = [
    HANDLE,
    IRF_IMAGE_INFO_T,
    ctypes.POINTER(FLOAT), # float*
    IRF_TEMP_CORRECTION_PAR_T,
    POINT,
]
thermal_sdk.GetPointTemp.restype = FLOAT # float

# CG320, CG640 Only Interface (예시)
# THERMALSDK_API float PASCAL GetPointTempCG( HANDLE ir_image, IRF_IMAGE_INFO_T image_info, IRF_TEMP_CORRECTION_PAR_T corrPara, POINT pt );
thermal_sdk.GetPointTempCG.argtypes = [
    HANDLE,
    IRF_IMAGE_INFO_T,
    IRF_TEMP_CORRECTION_PAR_T,
    POINT,
]
thermal_sdk.GetPointTempCG.restype = FLOAT # float

# Temperature Converter (예시)
# THERMALSDK_API float PASCAL ConvertFahToCels(float temp);
thermal_sdk.ConvertFahToCels.argtypes = [FLOAT]
thermal_sdk.ConvertFahToCels.restype = FLOAT

print("\n--- ctypes 매핑 완료 ---")
print("이제 위에서 정의된 클래스와 함수를 사용하여 SDK와 상호작용할 수 있습니다.")
print("예시: thermal_sdk.OpenConnect(...)")
